--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^1.2.0",
+    "install": "^0.13.0",
     "lit-element-scss-loader": "git+https://github.com/clicksolutions/lit-element-scss-loader.git",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
+    "npm": "^7.5.2",
     "nunjucks": "^3.2.2",
     "nunjucks-webpack-plugin": "^5.0.0",
     "opzjs": "^1.0.1",
@@ -51,8 +53,10 @@
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "tslint-loader": "^3.5.4",
+    "twojs-ts": "^0.7.0-13",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
+    "videocontext": "^0.54.0",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
