--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "file-loader": "^6.2.0",
     "gh-pages": "^1.2.0",
     "install": "^0.13.0",
-    "lit-element-scss-loader": "git+https://github.com/clicksolutions/lit-element-scss-loader.git",
+    "lit-scss-loader": "^1.1.0",
     "mini-css-extract-plugin": "^1.3.3",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.1",
     "npm": "^7.5.2",
     "nunjucks": "^3.2.2",
     "nunjucks-webpack-plugin": "^5.0.0",
@@ -48,6 +48,7 @@
     "sass-loader": "^10.1.0",
     "script-loader": "^0.7.2",
     "style-loader": "^2.0.0",
+    "three": "^0.125.2",
     "to-string-loader": "^1.1.6",
     "ts-loader": "^8.0.12",
     "ts-node": "^9.1.1",
@@ -59,9 +60,9 @@
     "videocontext": "^0.54.0",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^1.16.5"
   },
   "dependencies": {
-    "lit-element": "^2.4.0"
+    "lit": "^2.0.0-rc.2"
   }
 }
